--- a/registerProject.css
+++ b/registerProject.css
@@ -133,7 +133,7 @@ textarea{
   height: 700px;
   line-height: 700px;
   max-height: 700px;
-  background-color: #FCFCFC;
+    background-color: #FCFCFC;
   margin-bottom: 2%;
   border-style: solid;
   border-width: 1px;
@@ -345,3 +345,32 @@ textarea{
   padding-top: 20px;
   padding-bottom: 30px;
 }
+
+/*#canvas .draggable {
+  width: 100px;
+  height: 50px;
+  float: left;
+  background: #3399FF;
+  text-align: center;
+  border-radius: 3px;
+  border: 1;
+  border-color: white;
+}*/
+
+/*.draggable a{
+  line-height: 50px;
+  margin: 0;
+  padding: 0;
+  vertical-align: middle;
+  color: black;
+  font-size: 40px;
+  font-family: "Raleway";
+}*/
+
+/*#canvas{
+  height: 695px;
+  width: 1170px;
+  border-width: 2px;
+  border-color: lightgray;
+  border-style: dashed;
+}*/
