--- a/registerProject.css
+++ b/registerProject.css
@@ -1,5 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Lato:700);
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:600);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
 @import url(http://fonts.googleapis.com/css?family=Raleway:300);
 @import url(http://fonts.googleapis.com/css?family=Allerta);
 
@@ -69,6 +69,7 @@ body{
 
 .upload_img input{
   border:none;
+  font-size: 12px;
 }
 
 .upload_img a{
@@ -80,7 +81,8 @@ body{
 }
 
 #upload_bg input{
-  border: none
+  border: none;
+  font-size: 12px;
 }
 
 h1{
@@ -110,6 +112,7 @@ input{
     font-size: 15px;
     font-family: 'Open Sans';
     color: gray;
+    font-size: 12px;
     text-transform: capitalize;
 }
 
@@ -127,20 +130,95 @@ textarea{
   min-height: 50px;
 }
 
-#canvas{
-  color: white;
+#canvas_container{
+  /*margin: 2%;*/
+  overflow: scroll;
   width: 102%;
   height: 700px;
   line-height: 700px;
-  max-height: 700px;
-    background-color: #FCFCFC;
+  background-color: #FCFCFC;
+  background-image: url('tile.png');
   margin-bottom: 2%;
   border-style: solid;
   border-width: 1px;
   border-color: lightgray;
   text-align: center;
-  /*border-radius: 3px;*/
   border-radius: 3px;
+
+  -webkit-transition: background-color .5s;    /* Chorme  */
+  -moz-transition: background-color .5s;       /* Firefox */
+  -ms-transition: background-color .5s;        /* IE */
+  -o-transition: background-color .5s;         /* Opera */
+   transition: background-color .5s;           /* All */
+}
+
+.display_header{
+  position: relative;
+  width: 102%;
+  top: 15px;
+  z-index: 1;
+  background-color: red;
+  margin-bottom: 2%;
+}
+
+#canvas_container:hover{
+  border-color: #C2E0FF;
+  background-color: #E9E9E9;
+}
+
+#toolSet{
+  right: 1;
+  cursor: pointer;
+}
+
+#toolTip{
+    color: gray;
+    font-family: "Open Sans";
+    font-weight: lighter;
+    opacity: 0;
+
+    -webkit-transition: opacity .5s;    /* Chorme  */
+    -moz-transition: opacity .5s;       /* Firefox */
+    -ms-transition: opacity .5s;        /* IE */
+    -o-transition: opacity .5s;         /* Opera */
+    transition: opacity .5s;           /* All */
+}
+
+/*#toolTip:hover{
+    letter-spacing: 0px;
+    opacity: 1;
+}*/
+
+.zoomTool{
+  -webkit-transition: color .5s;    /* Chorme  */
+  -moz-transition: color .5s;       /* Firefox */
+  -ms-transition: color .5s;        /* IE */
+  -o-transition: color .5s;         /* Opera */
+   transition: color .5s;           /* All */
+}
+
+.zoomTool:hover{
+  color: #FF6666;
+}
+
+#canvas{
+  vertical-align: middle;
+  margin: 2%;
+  padding: auto;
+  position: relative;
+  color: white;
+  background-color: white;
+  /*width: 102%;*/
+  /*height: 700px;*/
+  /*line-height: 700px;*/
+  /*max-height: 700px;*/
+  /*background-color: #FCFCFC;
+  margin-bottom: 2%;
+  border-style: solid;
+  border-width: 1px;
+  border-color: lightgray;
+  text-align: center;*/
+  /*border-radius: 3px;*/
 }
 
 #canvas .fa-picture-o{
@@ -151,10 +229,10 @@ textarea{
   vertical-align: middle;
   z-index: -1;
 }
-
+/*
 #canvas:hover{
   border-color: #C2E0FF;
-}
+}*/
 
 #canvas img{
   /*position: absolute;*/
@@ -180,6 +258,7 @@ textarea{
   width: 102%;
   top: 15px;
   z-index: 1;
+  margin-bottom: 20px;
   /*position: -webkit-sticky;
   position: -moz-sticky;
   position: -ms-sticky;
@@ -345,32 +424,3 @@ textarea{
   padding-top: 20px;
   padding-bottom: 30px;
 }
-
-/*#canvas .draggable {
-  width: 100px;
-  height: 50px;
-  float: left;
-  background: #3399FF;
-  text-align: center;
-  border-radius: 3px;
-  border: 1;
-  border-color: white;
-}*/
-
-/*.draggable a{
-  line-height: 50px;
-  margin: 0;
-  padding: 0;
-  vertical-align: middle;
-  color: black;
-  font-size: 40px;
-  font-family: "Raleway";
-}*/
-
-/*#canvas{
-  height: 695px;
-  width: 1170px;
-  border-width: 2px;
-  border-color: lightgray;
-  border-style: dashed;
-}*/
