--- a/registerProject.css
+++ b/registerProject.css
@@ -134,8 +134,8 @@ textarea{
   /*margin: 2%;*/
   overflow: scroll;
   width: 102%;
-  height: 700px;
-  line-height: 700px;
+  height: 600px;
+  line-height: 600px;
   background-color: #FCFCFC;
   background-image: url('tile.png');
   margin-bottom: 2%;
@@ -144,6 +144,7 @@ textarea{
   border-color: lightgray;
   text-align: center;
   border-radius: 3px;
+  text-align: center;
 
   -webkit-transition: background-color .5s;    /* Chorme  */
   -moz-transition: background-color .5s;       /* Firefox */
@@ -163,7 +164,7 @@ textarea{
 
 #canvas_container:hover{
   border-color: #C2E0FF;
-  background-color: #E9E9E9;
+  background-color: #E6E6E6;
 }
 
 #toolSet{
@@ -208,17 +209,10 @@ textarea{
   position: relative;
   color: white;
   background-color: white;
-  /*width: 102%;*/
-  /*height: 700px;*/
-  /*line-height: 700px;*/
-  /*max-height: 700px;*/
-  /*background-color: #FCFCFC;
-  margin-bottom: 2%;
-  border-style: solid;
-  border-width: 1px;
-  border-color: lightgray;
-  text-align: center;*/
-  /*border-radius: 3px;*/
+  height: 800px;
+  width: 1280px;
+  color: black;
+  right: 2px;
 }
 
 #canvas .fa-picture-o{
@@ -229,6 +223,33 @@ textarea{
   vertical-align: middle;
   z-index: -1;
 }
+
+.buttons{
+    padding: 15px;
+    /*margin: 0%;*/
+    height: 50px;
+    line-height: 50px;
+    width: auto;
+    min-width: calc(50px*2);
+    position: absolute;
+    font-size: 20px;
+    /*left: 50px;
+    top: 50px;*/
+    vertical-align: middle;
+    /*background-color: red;*/
+    border-radius: 10px;
+    color: white;
+    font-family: "Open Sans";
+    text-transform: capitalize;
+    border: 3px solid rgba(255, 0, 0, 0);
+    -webkit-background-clip: padding-box; /* for Safari */
+    background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
+}
+
+.buttons:hover{
+  cursor: move;
+}
+
 /*
 #canvas:hover{
   border-color: #C2E0FF;
