Edit switch button to rectangle

--- a/registerProject.css
+++ b/registerProject.css
@@ -146,6 +146,7 @@ textarea{
 }
 
 #canvas_container{
+  /*display: table;*/
   overflow: scroll;
   width: 102%;
   height: 500px;
@@ -217,8 +218,9 @@ textarea{
 }
 
 #canvas{
+  /*display: table-cell;*/
   /*text-align: center;*/
-  overflow: hidden;
+  /*overflow: hidden;*/
   /*margin: 2%;*/
   position: relative;
   margin: auto;
@@ -227,12 +229,15 @@ textarea{
   background-color: white;
   /*line-height: 800px;*/
   height: 1067px;
-  vertical-align: middle;
   width: 1707px;
+  line-height: 1067px;
+  vertical-align: middle;
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
   background-blend-mode:  multiply;
+  /*top: 10%;*/
+  /*transform: translateY(-50%);*/
   /*right: 2%;*/
 }
 
@@ -450,12 +455,14 @@ input[type=checkbox] {
   display: none;
 }
 input[type=checkbox] + label {
+  /*margin-right: 10%;*/
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -webkit-tap-highlight-color: transparent;
   display: inline-block;
   background-color: #A1A1A1;
-  border-radius: 26px;
+  border-radius: 4px;
+  /*26*/
   cursor: pointer;
   height: 25px;
   /*28*/
@@ -465,7 +472,7 @@ input[type=checkbox] + label {
 }
 input[type=checkbox] + label:after {
   background-color: #fff;
-  border-radius: 24px;
+  border-radius: 3px;
   /*top:0*/
   content: '';
   text-align: center;
@@ -484,10 +491,10 @@ input[type=checkbox] + label:before {
   color: #fff;
   content: "+";
   position: absolute;
-  text-indent: 8px;
+  text-indent: 9px;
   /*top: 1px;*/
   left: 5px;
-  line-height: 45px;
+  line-height: 48px;
   font-size: 32px;
   height: 10px;
   width: 16px;
